--- a/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/create-offer/create-offer.component.html
@@ -39,22 +39,24 @@
                     <p class="hidden xl:flex text-xs sm:text-center md:text-start">{{ 'CREATE_OFFER._general_info' | translate }}</p>
                 </span>
             </button>
-            <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
-            <button id="bundle" (click)="toggleBundle()" [disabled]="!bundleDone"
-            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
-                <span id="bundle-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
-                    2
-                </span>
-                <span>
-                    <h3 class="flex text-sm md:text-base sm:text-center md:text-start">{{ 'CREATE_OFFER._bundle' | translate }}</h3>
-                    <p class="hidden xl:flex text-xs sm:text-center md:text-start">{{ 'CREATE_OFFER._bundle_info' | translate }}</p>
-                </span>
-            </button>
+            @if(BUNDLE_ENABLED){
+                <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
+                <button id="bundle" (click)="toggleBundle()" [disabled]="!bundleDone"
+                class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
+                    <span id="bundle-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
+                        2
+                    </span>
+                    <span>
+                        <h3 class="flex text-sm md:text-base sm:text-center md:text-start">{{ 'CREATE_OFFER._bundle' | translate }}</h3>
+                        <p class="hidden xl:flex text-xs sm:text-center md:text-start">{{ 'CREATE_OFFER._bundle_info' | translate }}</p>
+                    </span>
+                </button>
+            }
             <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
             <button id="prodspec" (click)="toggleProdSpec()" [disabled]="!prodSpecDone"
                 class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="prodspec-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
-                    3
+                    {{ BUNDLE_ENABLED ? 3 : 2 }}
                 </span>
                 <span>
                     <h3 class="flex sm:text-center md:text-start">{{ 'CREATE_OFFER._prod_spec' | translate }}</h3>
@@ -65,7 +67,7 @@
             <button id="catalog" (click)="toggleCatalogs()" [disabled]="!catalogsDone"
             class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="catalog-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
-                    4
+                    {{ BUNDLE_ENABLED ? 4 : 3 }}
                 </span>
                 <span>
                     <h3 class="flex text-sm md:text-base sm:text-center md:text-start">{{ 'CREATE_OFFER._catalog' | translate }}</h3>
@@ -76,7 +78,7 @@
             <button id="category" (click)="toggleCategories()" [disabled]="!categoriesDone"
             class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="category-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
-                    5
+                    {{ BUNDLE_ENABLED ? 5 : 4 }}
                 </span>
                 <span>
                     <h3 class="flex text-sm md:text-base sm:text-center md:text-start">{{ 'CREATE_OFFER._category' | translate }}</h3>
@@ -87,7 +89,7 @@
             <button id="license" (click)="toggleLicense()" [disabled]="!licenseDone"
             class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="license-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
-                    6
+                    {{ BUNDLE_ENABLED ? 6 : 5 }}
                 </span>
                 <span>
                     <h3 class="flex text-sm md:text-base sm:text-center md:text-start">{{ 'CREATE_OFFER._license' | translate }}</h3>
@@ -108,7 +110,7 @@
             <button id="price" (click)="togglePrice()" [disabled]="!priceDone"
             class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="price-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
-                    7
+                    {{ BUNDLE_ENABLED ? 7 : 6 }}
                 </span>
                 <span>
                     <h3 class="flex text-sm md:text-base sm:text-center md:text-start">{{ 'CREATE_OFFER._price_plans' | translate }}</h3>
@@ -119,7 +121,7 @@
             <button id="summary" [disabled]="!finishDone" (click)="showFinish()"
             class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
                 <span id="summary-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
-                    8
+                    {{ BUNDLE_ENABLED ? 8 : 7 }}
                 </span>
                 <span>
                     <h3 class="flex text-sm md:text-base sm:text-center md:text-start">{{ 'CREATE_OFFER._finish' | translate }}</h3>
@@ -252,12 +254,21 @@
 
                 </form>
                 <div class="flex w-full justify-items-end justify-end ml-4">
-                    <button type="button" (click)="toggleBundle();generalDone=true;" [disabled]="!generalForm.valid" [ngClass]="!generalForm.valid ? 'opacity-50' : 'hover:bg-primary-50'" class="flex text-white justify-end align-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
-                        {{ 'CREATE_OFFER._next' | translate }}
-                        <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                        </svg>
-                    </button>
+                    @if(BUNDLE_ENABLED){
+                        <button type="button" (click)="toggleBundle();generalDone=true;" [disabled]="!generalForm.valid" [ngClass]="!generalForm.valid ? 'opacity-50' : 'hover:bg-primary-50'" class="flex text-white justify-end align-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
+                            {{ 'CREATE_OFFER._next' | translate }}
+                            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                            </svg>
+                        </button>
+                    }@else{
+                        <button type="button" (click)="toggleProdSpec();generalDone=true;" [disabled]="!generalForm.valid" [ngClass]="!generalForm.valid ? 'opacity-50' : 'hover:bg-primary-50'" class="flex text-white justify-end align-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
+                            {{ 'CREATE_OFFER._next' | translate }}
+                            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                            </svg>
+                        </button>
+                    }
                 </div>
             }
             @if(showBundle){
