FIX unitOfMeasure validation bug

--- a/src/app/pages/seller-offerings/offerings/seller-offer/update-price-plan/update-price-plan.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/update-price-plan/update-price-plan.component.html
@@ -200,7 +200,7 @@
                                     <option value="">Select a value</option>
                                 }                                
                                 @for(val of selectedCharacteristic.productSpecCharacteristicValue; track val){
-                                    <option value="{{val.id}}">{{val.value}}</option>
+                                    <option value="{{val.value}}">{{val.value}}</option>
                                 }
                             </select>
                         }
