--- a/src/app/pages/seller-offerings/offerings/seller-offer/new-price-plan/new-price-plan.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/new-price-plan/new-price-plan.component.html
@@ -421,52 +421,54 @@
                         <option value="{{curr.code}}" [selected]="curr.code === selectedPriceUnit">({{curr.code}}) {{curr.name}}</option>
                     }                                             
                 </select>
-                @if(!touchedCharCheck){
-                    @if(!editProfile){
-                        <div class="flex justify-between">
-                            <div class="flex">
-                                <label class="font-bold text-lg dark:text-white">Configuring profile</label> 
-                                <div class="flex inline-flex ml-2 align-middle">
-                                    <svg data-popover-target="popover-profile" class="flex self-center w-6 h-6 text-primary-100" clip-rule="evenodd" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
-                                    </svg>
+                @if(selectedProdSpec.productSpecCharacteristic.length>0){
+                    @if(!touchedCharCheck){
+                        @if(!editProfile){
+                            <div class="flex justify-between">
+                                <div class="flex">
+                                    <label class="font-bold text-lg dark:text-white">Configuring profile</label> 
+                                    <div class="flex inline-flex ml-2 align-middle">
+                                        <svg data-popover-target="popover-profile" class="flex self-center w-6 h-6 text-primary-100" clip-rule="evenodd" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                                        </svg>
+                                    </div>
                                 </div>
+                                <button type="button" (click)="showDrawerProfile();$event.stopPropagation();" class="text-white w-fit h-full bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
+                                    <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
+                                    </svg>                                                                              
+                                </button>
                             </div>
-                            <button type="button" (click)="showDrawerProfile();$event.stopPropagation();" class="text-white w-fit h-full bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
-                                <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
-                                </svg>                                                                              
-                            </button>
-                        </div>
+        
+                        } @else {
+                            <div class="flex justify-between">
+                                <div class="flex">
+                                    <label class="font-bold text-lg dark:text-white">Configured price profile</label> 
+                                    <div class="flex inline-flex ml-2 align-middle">
+                                        <svg data-popover-target="popover-profile" class="flex self-center w-6 h-6 text-primary-100" clip-rule="evenodd" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                                        </svg>
+                                    </div>
+                                </div>
+                                <button type="button" (click)="showDrawerProfile();$event.stopPropagation();" class="text-white w-fit h-full bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
+                                    <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.779 17.779 4.36 19.918 6.5 13.5m4.279 4.279 8.364-8.643a3.027 3.027 0 0 0-2.14-5.165 3.03 3.03 0 0 0-2.14.886L6.5 13.5m4.279 4.279L6.499 13.5m2.14 2.14 6.213-6.504M12.75 7.04 17 11.28"/>
+                                        </svg>                                                                                                                              
+                                </button>
+                            </div>
+                        }
     
-                    } @else {
-                        <div class="flex justify-between">
-                            <div class="flex">
-                                <label class="font-bold text-lg dark:text-white">Configured price profile</label> 
-                                <div class="flex inline-flex ml-2 align-middle">
-                                    <svg data-popover-target="popover-profile" class="flex self-center w-6 h-6 text-primary-100" clip-rule="evenodd" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
-                                    </svg>
-                                </div>
+                        <div data-popover id="popover-profile" role="tooltip" class="absolute z-20 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
+                            <div class="px-3 py-2 bg-gray-100 border-b border-gray-200 rounded-t-lg dark:border-gray-600 dark:bg-gray-700">
+                                <h3 class="font-semibold text-gray-900 dark:text-white">Price profile</h3>
                             </div>
-                            <button type="button" (click)="showDrawerProfile();$event.stopPropagation();" class="text-white w-fit h-full bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
-                                <svg class="w-4 h-4 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.779 17.779 4.36 19.918 6.5 13.5m4.279 4.279 8.364-8.643a3.027 3.027 0 0 0-2.14-5.165 3.03 3.03 0 0 0-2.14.886L6.5 13.5m4.279 4.279L6.499 13.5m2.14 2.14 6.213-6.504M12.75 7.04 17 11.28"/>
-                                    </svg>                                                                                                                              
-                            </button>
-                        </div>
+                            <div class="px-3 py-2 inline-block">
+                                <p class="inline-block">You can select and configure your product's characteristics in order to define a price profile.
+                                </p>
+                            </div>
+                            <div data-popper-arrow></div>
+                        </div> 
                     }
-
-                    <div data-popover id="popover-profile" role="tooltip" class="absolute z-20 invisible inline-block w-64 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-sm opacity-0 dark:text-gray-400 dark:border-gray-600 dark:bg-gray-800">
-                        <div class="px-3 py-2 bg-gray-100 border-b border-gray-200 rounded-t-lg dark:border-gray-600 dark:bg-gray-700">
-                            <h3 class="font-semibold text-gray-900 dark:text-white">Price profile</h3>
-                        </div>
-                        <div class="px-3 py-2 inline-block">
-                            <p class="inline-block">You can select and configure your product's characteristics in order to define a price profile.
-                            </p>
-                        </div>
-                        <div data-popper-arrow></div>
-                    </div> 
                 }
 
                 <div class="flex justify-between">
