Update order form

--- a/src/app/pages/seller-offerings/offerings/seller-offer/new-price-plan/new-price-plan.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/new-price-plan/new-price-plan.component.html
@@ -224,9 +224,9 @@
                         <input formControlName="recurring" type="number" pattern="[0-9]"                      
                         class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-l border-gray-300 text-gray-900 dark:border-secondary-200 dark:text-white text-sm rounded-l-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
                         <select id="type" formControlName="recurringPeriod" class="bg-gray-50 dark:bg-secondary-300 text-gray-900 dark:text-white text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-1/4 p-2.5">
-                            <option selected value="daily">Day</option>
-                            <option value="weekly">Week</option>
-                            <option value="monthly">Month</option>                             
+                            <option selected value="day">Day</option>
+                            <option value="week">Week</option>
+                            <option value="month">Month</option>                             
                         </select>
                     </div>
                 }
@@ -271,10 +271,10 @@
                         <div>
                             <label class="font-bold text-lg dark:text-white">Period</label>
                             <select formControlName="period" id="type" class="mb-2 shadow bg-white dark:bg-secondary-300 border border-gray-300 text-gray-900 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                                <option selected value="daily">Day</option>
-                                <option value="weekly">Week</option>
-                                <option value="monthly">Month</option>
-                                <option value="yearly">Year</option>                                          
+                                <option selected value="day">Day</option>
+                                <option value="week">Week</option>
+                                <option value="month">Month</option>
+                                <option value="year">Year</option>                                          
                             </select>
                         </div>
                     </div>
