--- a/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-offer/update-offer/update-offer.component.html
@@ -1433,11 +1433,11 @@
                     @if(recurringSelected){
                         <label class="font-bold text-lg dark:text-white">{{ 'UPDATE_OFFER._choose_period' | translate }}</label>
                         <select id="type" value="{{selectedPeriod}}" (change)="onPricePeriodChange($event)" class="shadow bg-white dark:bg-secondary-300 border border-gray-300 text-gray-900 dark:border-secondary-200 dark:text-white text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                            <option value="DAILY">DAILY</option>
-                            <option value="WEEKLY">WEEKLY</option>
-                            <option value="MONTHLY">MONTHLY</option>
-                            <option value="QUARTERLY">QUARTERLY</option>
-                            <option value="YEARLY">YEARLY</option>
+                            <option value="DAY">DAY</option>
+                            <option value="WEEK">WEEK</option>
+                            <option value="MONTH">MONTH</option>
+                            <option value="QUARTER">QUARTER</option>
+                            <option value="YEAR">YEAR</option>
                             <option value="QUINQUENNIAL">QUINQUENNIAL</option>                
                         </select>
                     } @else if(usageSelected){
