Updated version of the drawer

--- a/src/app/pages/search-catalog/search-catalog.component.html
+++ b/src/app/pages/search-catalog/search-catalog.component.html
@@ -72,11 +72,11 @@
         </div>
       } @else {
         <div class="md:pl-5 grid grid-cols-1 place-items-center lg:grid-cols-2 xl:grid-cols-3">
-          @for (prod of products; track prod.id) {
-            <bae-off-card [productOff]=prod class="w-full h-full p-2"></bae-off-card>
+          @for (prod of products; track prod.id; let index = $index) {
+            <bae-off-card [productOff]=prod [cardId]="index" class="w-full h-full p-2"></bae-off-card>
           } @empty {
             <div class="min-h-19 dark:text-gray-600 text-center">{{ 'DASHBOARD._not_found' | translate }}</div>
-          } 
+          }
         </div>
         @if (!loading_more) {
           @if (page_check) {
