--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -13,7 +13,7 @@
   } @else {
     <bae-categories-filter class="hidden md:block w-1/5 md:w-2/4 lg:w-1/4"></bae-categories-filter>
   }
-  
+
   <div class="flex flex-col w-full md:w-4/5 lg:w-3/4">
     <section class="md:pl-5 content pb-5 px-4 flex items-center">
       <button (click)="showDrawer=!showDrawer;$event.stopPropagation();" type="button" class="md:hidden px-2 w-fit h-fit py-2 text-sm font-medium text-center inline-flex items-center dark:text-white bg-white text-primary-100 border border-primary-100 rounded-lg dark:bg-primary-100 dark:border-secondary-200">
@@ -26,7 +26,7 @@
         <form class="mx-5 w-full">
           <div class="flex">
             <div class="relative w-full">
-              <input type="search" id="search" [formControl]="searchField" 
+              <input type="search" id="search" [formControl]="searchField"
               (keydown.enter)="filterSearch($event)"
               class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-s-gray-700  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500"
               placeholder="{{ 'DASHBOARD._search_ph' | translate }}" required>
@@ -51,8 +51,8 @@
       </div>
     } @else {
       <div class="md:pl-5 grid grid-cols-1 place-items-center lg:grid-cols-2 xl:grid-cols-3">
-        @for (prod of products; track prod.id) {
-          <bae-off-card [productOff]=prod class="w-full h-full p-2"></bae-off-card>
+        @for (prod of products; track prod.id; let index = $index) {
+          <bae-off-card [productOff]=prod [cardId]="index" class="w-full h-full p-2"></bae-off-card>
         } @empty {
           <div class="min-h-19 dark:text-gray-600 text-center">{{ 'DASHBOARD._not_found' | translate }}</div>
         }
@@ -79,5 +79,5 @@
       }
     }
   </div>
-  
+
 </section>
