--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -73,8 +73,8 @@
           {{ 'CARD._details' | translate }}
         </button>
         @if(check_logged){
-          <button id="add-to-cart" (click)="prepareOffData()" type="button" [disabled]="!PURCHASE_ENABLED"
-                  data-drawer-target="drawer-add-to-cart" data-drawer-show="drawer-add-to-cart" aria-controls="drawer-add-to-cart" data-drawer-placement="right"
+          <button id="add-to-cart" type="button" [disabled]="!PURCHASE_ENABLED"
+                  (click)="openDrawer()"
                   [ngClass]="!PURCHASE_ENABLED ? 'opacity-50' : 'hover:bg-primary-50'"
                   class="flex align-items-bottom text-white cursor-pointer bg-green-700 hover:bg-green-900 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">
             {{ 'CARD._add_cart' | translate }}
@@ -85,65 +85,15 @@
   </div>
 </div>
 
-
-
-<!-- drawer init and toggle -->
-
-<!-- drawer component -->
-<div id="drawer-add-to-cart" class="fixed top-0 right-0 z-40 h-screen p-4 pt-24 overflow-y-auto transition-transform translate-x-full bg-secondary-50 w-80 dark:bg-gray-800 flex flex-col" tabindex="-1" aria-labelledby="drawer-right-label">
-  <h5 id="drawer-right-label" class="inline-flex items-center mb-4 text-base font-semibold text-primary-100 dark:text-gray-400"><svg class="w-4 h-4 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-    <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
-  </svg>Adding {{productOff?.name}} to cart</h5>
-  <button type="button" data-drawer-hide="drawer-add-to-cart" aria-controls="drawer-add-to-cart" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 absolute top-2.5 end-2.5 inline-flex items-center justify-center dark:hover:bg-gray-600 dark:hover:text-white" >
-    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-    </svg>
-    <span class="sr-only">Close menu</span>
-  </button>
-  <p class="mb-6 text-sm text-gray-500 dark:text-gray-400">In order to add <b>{{productOff?.name}}</b> to your cart you have to select the price model and the set of characteristics you prefer.</p>
-  <p class="mb-6 text-sm text-gray-500 dark:text-gray-400">Please, firstly select the price plan:</p>
-  @for (pp of productOff?.productOfferingPrice; track pp.id){
-    <div class="flex flex-col rounded-lg border border-dashed border-primary-100 bg-white p-2 m-2 gap-1 cursor-pointer hover:bg-sky-50 transition-all duration-200"
-         [ngClass]="{
-                'border-primary-100 border': pp.id !== selectedPricePlanId,
-                 'border-transparent outline outline-2 outline-teal-500 bg-teal-50': pp.id === selectedPricePlanId
-          }"
-          (click)="onPricePlanSelected(pp)">
-      <div class="text-base font-semibold text-primary-100 dark:text-gray-400 flex justify-between content-center">
-        {{pp.name}}
-        @if (pp.prodSpecCharValueUse){
-          <span class="bg-indigo-100 text-indigo-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-indigo-900 dark:text-indigo-300">PROFILE</span>
-        }
-      </div>
-      <div class="text-sm text-gray-500 dark:text-gray-400">{{pp.description}}</div>
-    </div>
-  } @empty {
-    <div>No plan prices currently available</div>
-  }
-
-  @if (selectedPricePlan) {
-    @if (selectedPricePlan.prodSpecCharValueUse) {
-      <p class="mt-6 text-sm text-gray-500 dark:text-gray-400">This price plan has an associate profile. That means that the following characteristics are already set for you.</p>
-      @for (ch of selectedPricePlan.prodSpecCharValueUse ; track ch.id) {
-        <app-characteristic [characteristic]="ch" (valueChange)="onValueChange($event)"></app-characteristic>
-      }
-    } @else {
-      <p class="mt-6 text-sm text-gray-500 dark:text-gray-400">Please select the characteristics you need to suit this offer to you.</p>
-      @for (ch of selected_chars ; track ch.characteristic.id) {
-        <div class="p-2">
-          {{ch.characteristic.name}}
-        </div>
-      }
-    }
-  }
-  <div class="mt-auto m-4 grid grid-cols-1 gap-4">
-    <a href="#" class="flex items-center justify-center gap-x-2 px-4 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Add to cart <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-    </svg></a>
-  </div>
-</div>
-
-
+<!-- Drawer Reutilizable -->
+<app-price-plan-drawer
+  [drawerId]="'drawer-product'"
+  [productOff]="productOff"
+  [prodSpec]="prodSpec"
+  [isOpen]="isDrawerOpen"
+  [width]="'w-96'"
+  (closeDrawer)="closeDrawer()"
+></app-price-plan-drawer>
 
 
 <!-- Main modal -->
@@ -257,7 +207,7 @@
             <hr class="h-px bg-gray-200 border-0 dark:bg-gray-700">
             <div class="flex">
               @if(check_logged){
-              <button (click)="toggleCartSelection();$event.stopPropagation();" [disabled]="!PURCHASE_ENABLED" [ngClass]="!PURCHASE_ENABLED ? 'opacity-50' : 'hover:bg-primary-50'" type="button" class="m-4 w-fit flex items-center justify-start text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+              <button (click)="openDrawer()" [disabled]="!PURCHASE_ENABLED" [ngClass]="!PURCHASE_ENABLED ? 'opacity-50' : 'hover:bg-primary-50'" type="button" class="m-4 w-fit flex items-center justify-start text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                 <svg class="w-3.5 h-3.5 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 21">
                 <path d="M15 12a1 1 0 0 0 .962-.726l2-7A1 1 0 0 0 17 3H3.77L3.175.745A1 1 0 0 0 2.208 0H1a1 1 0 0 0 0 2h.438l.6 2.255v.019l2 7 .746 2.986A3 3 0 1 0 9 17a2.966 2.966 0 0 0-.184-1h2.368c-.118.32-.18.659-.184 1a3 3 0 1 0 3-3H6.78l-.5-2H15Z"/>
                 </svg>
