--- a/src/styles.css
+++ b/src/styles.css
@@ -64,6 +64,35 @@ markdown h6 {
   margin-bottom: 0.5em;
 }
 
+.price-plan markdown h1 {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
+.price-plan markdown h2 {
+  font-size: 1em;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
+.price-plan markdown h3 {
+  font-size: 0.83em;
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
+.price-plan markdown h4 {
+  font-size: 0.67em;
+  margin-bottom: 0.5em;
+}
+.price-plan markdown h5 {
+  font-size: 0.5em;
+  margin-bottom: 0.5em;
+}
+.price-plan markdown h6 {
+  font-size: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+
 markdown p {
   margin-bottom: 1em;
 }
