--- a/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
+++ b/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
@@ -32,13 +32,13 @@
     <p class="mb-6 text-sm text-gray-500 dark:text-gray-400">In order to add <b>{{productOff?.name}}</b> to your cart you have to select the price model and the set of characteristics you prefer.</p>
     <p class="mb-6 text-sm text-gray-500 dark:text-gray-400">Please, firstly select the price plan:</p>
     @for (pp of productOff?.productOfferingPrice; track pp.id){
-      <div class="price-plan flex flex-col rounded-lg border border-dashed border-primary-100 bg-white p-2 m-2 gap-1 cursor-pointer hover:bg-sky-50 transition-all duration-200"
+      <div class="price-plan flex flex-col rounded-lg border border-dashed border-primary-100 bg-white dark:bg-gray-800 p-2 m-2 gap-1 cursor-pointer hover:bg-sky-50 transition-all duration-200"
            [ngClass]="{
                   'border-primary-100 border': pp.id !== form.get('selectedPricePlan')?.value,
                    'border-transparent outline outline-2 outline-teal-500 bg-teal-50': pp.id === form.get('selectedPricePlan')?.value
             }"
            (click)="onPricePlanSelected(pp)">
-        <div class="text-base font-semibold text-primary-100 dark:text-gray-400 flex justify-between content-center">
+        <div class="text-base font-semibold text-primary-100 dark:text-gray-400 flex justify-between content-center text-wrap break-all">
           {{pp.name}}
           @if (pp.prodSpecCharValueUse){
             <span class="bg-indigo-100 text-indigo-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-indigo-900 dark:text-indigo-300">PROFILE</span>
@@ -101,11 +101,11 @@
         <span class="sr-only">Loading price...</span>
       </div>
     } @else if (isCustom){
-      <div class="text-sm text-white dark:text-primary-100">
+      <div class="text-sm text-white">
         <p>This offer includes a custom price plan. This implies that the service price plan has been created externally to the DOME Marketplace and is entirely determined by the service provider. The final price will be calculated after the product order is submitted to the service provider.</p>
       </div>
     } @else if (price) {
-      <div class="text-sm text-white dark:text-primary-100">
+      <div class="text-sm text-white">
         @for (key of objectKeys(price); track key) {
           <div class="flex justify-between mb-2">
             <span class="font-medium capitalize">{{ key }}:</span>
@@ -124,7 +124,7 @@
       (click)="createOrder()"
       class="flex items-center justify-center gap-x-2 px-4 py-2 text-sm font-medium text-center text-white bg-green-400 hover:bg-green-500 rounded-lg focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
       Add to cart
-      <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+      <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2 mr-2 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
       </svg>
     </button>
